Fixed hex container alignment

--- a/SimpleHexGrid.css
+++ b/SimpleHexGrid.css
@@ -36,10 +36,11 @@ html {
   }
  
   .BlackBlock {
-   background-color: black; 
    filter: blur(1px) ;
-   opacity: 0.83;
-   width: 87%;  
+   background-color: aliceblue;
+   opacity: 0.35;
+   box-shadow: inset 0 0 30px cyan;
+   width: 90%;  
    height: 50%; 
    position: fixed;
    bottom: 50%; 
@@ -77,7 +78,7 @@ html {
 
  .title {
   margin: 0 auto;
-  top: 13px;
+  top: 20px;
   z-index: 2;
   position: relative;
 
